# docs

./: .gitignore  README.md  amazon-bedrock.md  artifacts.md  checkpointing.md  cli-reference.md  commands.md  desktop.md  discover-plugins.md  env-vars.md  fast-mode.md  features-overview.md  google-vertex-ai.md  headless.md  hooks-guide.md  how-claude-code-works.md  jetbrains.md  memory.md  permission-modes.md  prompt-caching.md  quickstart.md  routines.md  security.md  sessions.md  tools-reference.md  vs-code.md
claude-agent-sdk-source-code-research/: .gitignore  README.md
claude-agent-sdk-source-code-research/demos/: 01_basic_query.py  02_query_with_tools.py  03_query_max_turns.py  04_client_basic.py  05_client_multi_turn.py  06_client_interrupt.py  07_client_async_input.py  08_tool_simple.py  09_tool_typeddict_schema.py  10_tool_error_handling.py  11_tool_annotations.py  12_mcp_external_server.py  13_hook_pre_tool_use.py  14_hook_post_tool_use.py  15_hook_user_prompt_submit.py  16_hook_stop.py  17_hook_notification.py  18_agent_definition.py  19_agent_multi_agents.py  20_agent_filesystem.py  21_permission_callback.py  22_permission_modes.py  23_permission_allow_deny.py  24_session_continue.py  25_session_resume.py  26_session_fork.py  27_session_store.py  28_session_list_and_info.py  29_structured_output.py  30_streaming_partial.py  31_system_prompt_string.py  32_system_prompt_preset.py  33_cost_tracking.py  34_budget_control.py  35_thinking_config.py  36_effort_levels.py  37_model_selection.py  38_setting_sources.py  39_error_handling.py  40_file_checkpointing.py  (+6 more)
(+149 files in other folders)
