[project]
name = "claude-agent-sdk-demos"
version = "0.1.0"
description = "Claude Agent SDK Python 核心功能演示集"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.100",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
